--- a/css/style.scss
+++ b/css/style.scss
@@ -64,17 +64,22 @@ text-transform: uppercase;
 
 .delay-1{
   animation-name: delay-opacity;
-  animation-duration: 2s;
+  animation-duration: 6s;
 }
 
 .delay-2{
   animation-name: delay-opacity;
-  animation-duration: 3s;
+  animation-duration: 6.5s;
 }
 
 .delay-3{
   animation-name: delay-opacity;
-  animation-duration: 4s;
+  animation-duration: 7s;
+}
+
+.delay-4{
+  animation-name: delay-opacity;
+  animation-duration: 7.5s;
 }
 
 @keyframes delay-opacity{
@@ -527,8 +532,9 @@ padding: 0;
 
   .video-background{
     position: absolute;
-    width: auto;
-    height: 100vh;
+    width: 130vw;
+    left: -15vw;
+    height: auto;
     z-index: -100;
   }
 }
@@ -1389,6 +1395,18 @@ padding-right: 1vw;
     border-bottom: 0;
   }
 
+/* END NAV */
+
+
+/* TYPE */
+
+h1{
+  font-size: 60px;
+  line-height: 50px;
+}
+
+/* END TYPE */
+
 #push-mobile{
   img{
     width: 40vw;
@@ -1396,6 +1414,15 @@ padding-right: 1vw;
 }
 
 
+
+#container-1{
+  .video-background{
+
+    left: 0vw;
+    width: 100vw;
+    height: auto;
+  }
+}
 
 
 
