--- a/css/style.scss
+++ b/css/style.scss
@@ -1021,10 +1021,65 @@ padding-top: 10vh;
 /* BEGINS PORTFOLIO */
 
 /* PORTFOLIO PAGE */
+
+.filters{
+  margin-top: 10vh;
+  float: left;
+    list-style: none;
+    height: 25px;
+
+.margin-left{
+  margin-left: 19.5vw;
+}
+
+    li{
+      float: left;
+      a{
+        float: left;
+      float: left;
+      color: gray;
+      font-size: 14px;
+      letter-spacing: 2px;
+      font-family: gotham;
+      text-decoration: none;
+      padding-top: 10px;
+      padding-left: 10px;
+      padding-right: 10px;
+      text-align: center;
+      width: 100%;
+    }
+li:hover{
+    a{
+
+    }
+  }
+
+    a:focus{
+          border-bottom: 3px solid $orange;
+    }
+    }
+
+}
+
+.mix {
+
+}
+
+.containMix .mix {display: none;}
+
 .portfolio-container{
   float: left;
-  padding-top: 10vh;
+  padding-top: 0vh;
   padding-bottom: 10vh;
+  list-style: none;
+li{
+
+}
+
+  li:hover{
+    transform: scale(1.02);
+    transition: .25s;
+  }
 }
 
 .aside-toggle{
