--- a/css/style.css
+++ b/css/style.css
@@ -766,6 +766,13 @@ footer {
 .aside-display-toggle {
   display: block; }
 
+#property-landing .portfolio-delay-1 {
+  animation-name: delay-opacity;
+  animation-duration: 3s; }
+#property-landing .portfolio-delay-2 {
+  animation-name: delay-opacity;
+  animation-duration: 3.5s; }
+
 #portfolio section {
   padding-top: 2vh;
   float: left;
