--- a/css/style.scss
+++ b/css/style.scss
@@ -41,6 +41,16 @@ object{
 
 }
 
+.small-headline{
+  letter-spacing: 2px;
+  color: $black;
+  padding-left: 5px;
+}
+
+.italic{
+  font-style: italic;
+}
+
 h1{
 font-family: gotham;
 font-weight: 900;
@@ -769,7 +779,7 @@ padding: 0;
 }
 
 .zoom-1{
-    background-image: url('../assets/images/unparalleled-luxe.png');
+    background-image: url('../assets/images/push-1.png');
     h2{
       color: white!important;
     }
@@ -779,9 +789,11 @@ padding: 0;
 }
 
 .zoom-2{
-    background-image: url('../assets/images/meticulous.png');
-    h2{
-    }
+    background-image: url('../assets/images/push-2.png');
+}
+
+.zoom-3{
+    background-image: url('../assets/images/push-3.png');
 }
 
 .reveal-container{
@@ -1544,8 +1556,10 @@ p{
 @media (min-width: 1200px){
 
 header{
+      padding-left: 35px;
   .logo-container{
     max-width: 150px;
+
 
   }
   h5{
