--- a/css/style.scss
+++ b/css/style.scss
@@ -1592,7 +1592,7 @@ padding-top: 30vh;
   }
 
   #featured-projects{
-    padding-top: 25vh;
+    padding-top: 20vh;
     .portfolio-list{
       height: 50vh;
     }
@@ -1600,7 +1600,7 @@ padding-top: 30vh;
 
 #who-we-are{
   #featured-projects{
-    padding-top: 25vh;
+    padding-top: 20vh;
     .container-p{
       height: 50vh;
     }
@@ -1620,6 +1620,12 @@ padding-top: 30vh;
   }
 }
 
+
+#what-we-do{
+  #featured-projects{
+    padding-top: 20vh;
+  }
+}
 
 
 
