--- a/css/style.css
+++ b/css/style.css
@@ -1094,6 +1094,7 @@ footer {
       text-align: center;
       background-color: white;
       border-top: 1px solid lightgray;
+      box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.2);
       background-color: white;
       padding-top: 15px; }
     #subnav .sub-2 {
