--- a/css/style.scss
+++ b/css/style.scss
@@ -1156,6 +1156,11 @@ li{
     animation-name: delay-opacity;
     animation-duration: 3.5s;
   }
+
+  .portfolio-delay-3{
+    animation-name: delay-opacity;
+    animation-duration: 4s;
+  }
 }
 #portfolio{
 
