--- a/css/style.css
+++ b/css/style.css
@@ -352,6 +352,25 @@ nav {
     text-align: center;
     border-top: 1px solid lightgray; }
 
+#subnav-mobile {
+  display: none;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  padding-top: 18px; }
+  #subnav-mobile li {
+    position: absolute;
+    padding-top: 0px;
+    padding-bottom: 10px;
+    padding-left: 0;
+    padding-right: 0;
+    height: 50px;
+    width: 150%;
+    left: -25%;
+    text-align: center;
+    border-top: 1px solid lightgray; }
+
 #nav li:hover #subnav {
   display: block; }
 
