--- a/css/style.scss
+++ b/css/style.scss
@@ -59,6 +59,7 @@ font-size: 40px;
 line-height: 35px;
 padding-bottom: 5px;
 text-transform: uppercase;
+margin-bottom: 5vh;
 
 .green-underline{
   border-bottom: 10px solid $green;
