--- a/css/style.css
+++ b/css/style.css
@@ -452,9 +452,9 @@ footer {
   color: white; }
 #container-1 .video-background {
   position: absolute;
-  width: 130vw;
-  left: -15vw;
-  height: auto;
+  float: left;
+  right: -50vw;
+  height: 100vh;
   z-index: -100; }
 
 #container-2 {
