--- a/css/style.scss
+++ b/css/style.scss
@@ -1435,6 +1435,17 @@ h5{
 
 /* ----------------------------------------------------------------- */
 
+#container-1{
+  .video-background{
+
+    left: 0vw;
+    width: auto;
+    height: 100vh;
+  }
+}
+
+
+
 #container-2{
   padding-top: 25vh;
 .image-container{
