--- a/css/style.css
+++ b/css/style.css
@@ -1005,6 +1005,11 @@ footer {
   /* CLOSES HEADER */
   /* ENDS HEADER 768 */
   /* ----------------------------------------------------------------- */
+  #container-1 .video-background {
+    left: 0vw;
+    width: auto;
+    height: 100vh; }
+
   #container-2 {
     padding-top: 25vh; }
     #container-2 .image-container {
