--- a/css/style.scss
+++ b/css/style.scss
@@ -1440,6 +1440,10 @@ h5{
 
 #container-2{
   padding-top: 25vh;
+  .copy-container{
+    padding-top: 2.5vh;
+    padding-bottom: 2.5vh;
+  }
 .image-container{
   position: relative;
   margin-top: 7vh;
@@ -1450,6 +1454,20 @@ h5{
 }
 
 
+}
+
+#push-1-pt2-mobile{
+padding-top: 7vh!important;
+    h2{
+      color: $black;
+      float: left;
+      margin-top: 5vh;
+      margin-bottom: 2.5vh;
+    }
+    p{
+      color: black;
+      float: left;
+    }
 }
 
 }/* !!CLOSES 768PX @MEDIA QUERY!! */
