--- a/css/style.scss
+++ b/css/style.scss
@@ -271,6 +271,7 @@ font-size: 16px;
 #featured-projects{
   .portfolio-list{
     transition: .25s;
+    height: 21vh!important;
   }
 
 .portfolio-list:hover{
@@ -378,19 +379,20 @@ nav{
 list-style: none;
 padding-left: 5vw;
 padding-right: 5vw;
+float: left;
 li{
-text-align: center;
+text-align: left;
 padding-left: 25px;
 padding-right: 25px;
 font-family: gotham;
 letter-spacing: 2px;
 transition: 1s;
-margin-bottom: 7.5vh;
+margin-bottom: 5vh;
+float: left;
 }
 a{
 color: $black;
 text-decoration: none;
-
 }
 }
 
@@ -400,14 +402,16 @@ text-decoration: none;
   margin-top: 10vh;
   padding-top: 10vh;
   padding-left: 0;
+  float: left;
+
   li{
-text-align: center;
+text-align: left;
 padding-left: 25px;
 padding-right: 25px;
 font-family: gotham;
 letter-spacing: 2px;
 transition: 1s;
-margin-bottom: 7.5vh;
+margin-bottom: 5vh;
   }
   a{
 color: $black;
@@ -415,31 +419,39 @@ text-decoration: none;
   }
 }
 
+
 .nav-item-1{
   animation-name: fade-2;
   animation-duration: .5s;
-
 }
+
 
 .nav-item-2{
   animation-name: fade-2;
   animation-duration: 1s;
+  float: left;
+  padding-right: 0!important;
 }
+
 
 .nav-item-3{
   animation-name: fade-2;
   animation-duration: 1.5s;
 }
 
+
 .nav-item-4{
   animation-name: fade-2;
   animation-duration: 2s;
 }
 
+
 .nav-item-5{
   animation-name: fade-2;
   animation-duration: 2.5s;
 }
+
+
 #active{
   border-bottom: 2px solid $turquoise;
 }
@@ -451,7 +463,6 @@ text-decoration: none;
   margin: 0;
   padding: 0;
   position: relative;
-padding-top: 18px;
   li{
     position: absolute;
     padding-top: 0px;
@@ -461,9 +472,18 @@ padding-top: 18px;
     height: 50px;
     width: 150%;
     left: -25%;
-    text-align: center;
+    text-align: left;
     border-top: 1px solid lightgray;
   }
+}
+
+
+#subnav-open{
+  padding: 0;
+  padding-left: 10px;
+  position: relative;
+  margin-top: 0;
+    width: 35px;
 }
 
 #nav{
@@ -472,22 +492,44 @@ padding-top: 18px;
     font-weight: bold;
   }
   }
-#subnav-mobile{
+
+.subnav-mobile-custom{
   display: none;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  position: relative;
-padding-top: 18px;
+}
+
+#subNavMobile{
+  margin-bottom: 35px;
+  margin-top: -35px;
+  margin-left: 25px;
+  padding-top: 10px;
+  padding-left: 0px!important;
+  transition: .25s;
+      border-left: 1px solid gray;
+
+  ul{
+    list-style: none;
+    margin-left: 0;
+
+  }
+
   li{
     float: left;
-    padding-left: 0;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 0px;
     padding-right: 0;
     text-align: center!important;
     margin: 0;
+    color: gray!important;
+    font-size: 14px;
+    img{
+      width: 20px;
+      height: auto;
+    }
   }
 }
 }
+
 
 #nav{
   li:hover{
@@ -1782,7 +1824,7 @@ padding-top: 30vh;
   #featured-projects{
     padding-top: 20vh;
     .portfolio-list{
-      height: 50vh;
+      height: 50vh!important;
     }
   }
 
