--- a/css/style.css
+++ b/css/style.css
@@ -369,14 +369,32 @@ nav {
   font-weight: bold; }
 #nav .subnav-mobile-custom {
   display: none; }
+#nav .display-toggle-subnav {
+  display: block;
+  animation-name: fade;
+  transition: .5s;
+  animation-duration: 1s;
+  animation-iteration-count: 1;
+  opacity: 1;
+  border-left: 1px solid gray; }
+  #nav .display-toggle-subnav .sub-1 {
+    animation: fade 1s ease; }
+  #nav .display-toggle-subnav .sub-2 {
+    animation: fade 1.5s ease; }
+  #nav .display-toggle-subnav .sub-3 {
+    animation: fade 2s ease; }
+@keyframes fade {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
 #nav #subNavMobile {
   margin-bottom: 35px;
   margin-top: -35px;
   margin-left: 25px;
   padding-top: 10px;
   padding-left: 0px !important;
-  transition: .25s;
-  border-left: 1px solid gray; }
+  transition: .25s; }
   #nav #subNavMobile ul {
     list-style: none;
     margin-left: 0; }
