--- a/css/style.scss
+++ b/css/style.scss
@@ -497,6 +497,35 @@ text-decoration: none;
   display: none;
 }
 
+.display-toggle-subnav{
+  display: block;
+  animation-name: fade;
+  transition: .5s;
+  animation-duration: 1s;
+  animation-iteration-count: 1;
+  opacity: 1;
+      border-left: 1px solid gray;
+      
+  .sub-1{
+animation: fade 1s ease;
+  }
+  .sub-2{
+animation: fade 1.5s ease;
+  }
+  .sub-3{
+animation: fade 2s ease;
+  }
+}
+
+@keyframes fade{
+  from{
+    opacity: 0;
+  }
+  to{
+    opacity: 1;
+  }
+}
+
 #subNavMobile{
   margin-bottom: 35px;
   margin-top: -35px;
@@ -504,7 +533,7 @@ text-decoration: none;
   padding-top: 10px;
   padding-left: 0px!important;
   transition: .25s;
-      border-left: 1px solid gray;
+
 
   ul{
     list-style: none;
