--- a/css/style.css
+++ b/css/style.css
@@ -365,6 +365,9 @@ nav {
   margin-top: 0;
   width: 35px; }
 
+#subnav-open:hover img {
+  transform: rotateZ(180deg); }
+
 #nav .nav-item-2:hover a {
   font-weight: bold; }
 #nav .subnav-mobile-custom {
