--- a/css/style.css
+++ b/css/style.css
@@ -317,7 +317,8 @@ nav {
 
 .nav-item-1 {
   animation-name: fade-2;
-  animation-duration: .5s; }
+  animation-duration: .5s;
+  padding-right: 0 !important; }
 
 .nav-item-2 {
   animation-name: fade-2;
@@ -365,8 +366,12 @@ nav {
   margin-top: 0;
   width: 35px; }
 
-#subnav-open:hover img {
-  transform: rotateZ(180deg); }
+#subnav-1-open {
+  padding: 0;
+  padding-left: 10px;
+  position: relative;
+  margin-top: 0;
+  width: 35px; }
 
 #nav .nav-item-2:hover a {
   font-weight: bold; }
@@ -415,14 +420,14 @@ nav {
       width: 20px;
       height: auto; }
 
-#nav li:hover #subnav-mobile {
-  display: block; }
-  #nav li:hover #subnav-mobile li a {
-    font-weight: normal !important; }
-
 #nav li:hover #subnav {
   display: block; }
   #nav li:hover #subnav li a {
+    font-weight: normal !important; }
+
+#nav li:hover #subnav1 {
+  display: block; }
+  #nav li:hover #subnav1 li a {
     font-weight: normal !important; }
 
 /* ENDS UNIVERSAL STYLES */
@@ -1128,11 +1133,11 @@ footer {
     padding-left: 0 !important;
     float: left; }
     .secondary-nav li {
-      text-align: center;
+      text-align: center !important;
       padding-top: 5px;
       padding-bottom: 5px;
-      padding-left: 7.5px;
-      padding-right: 7.5px;
+      padding-left: 7.5px !important;
+      padding-right: 7.5px !important;
       margin-right: 2px;
       font-family: gotham;
       letter-spacing: 2px;
@@ -1151,13 +1156,19 @@ footer {
         color: white; }
 
   .nav-item-1 {
-    animation-name: none; }
+    animation-name: none;
+    padding-left: 15px !important;
+    padding-right: 15px !important; }
 
   .nav-item-2 {
-    animation-name: none; }
+    animation-name: none;
+    padding-left: 15px !important;
+    padding-right: 15px !important; }
 
   .nav-item-3 {
-    animation-name: none; }
+    animation-name: none;
+    padding-left: 15px !important;
+    padding-right: 15px !important; }
 
   .nav-item-4 {
     animation-name: none; }
@@ -1199,11 +1210,48 @@ footer {
       padding-top: 15px;
       padding-bottom: 10px; }
 
+  #subnav1 {
+    display: none;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    padding-top: 18px; }
+    #subnav1 li {
+      float: left;
+      position: absolute;
+      padding-left: 0;
+      padding-right: 0;
+      height: 50px;
+      width: 150%;
+      left: -25%;
+      text-align: center;
+      background-color: white;
+      border-top: 1px solid lightgray;
+      box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.2);
+      background-color: white;
+      padding-top: 15px; }
+    #subnav1 .sub-2 {
+      margin-top: 50px; }
+    #subnav1 .sub-3 {
+      margin-top: 100px; }
+    #subnav1 a {
+      height: 100%;
+      padding-top: 15px;
+      padding-bottom: 10px; }
+
   #nav .nav-item-2:hover a {
     font-weight: normal; }
   #nav li:hover #subnav {
     display: block; }
     #nav li:hover #subnav li:hover {
+      background-color: #f1f1f1; }
+
+  #nav .nav-item-1:hover a {
+    font-weight: normal; }
+  #nav li:hover #subnav1 {
+    display: block; }
+    #nav li:hover #subnav1 li:hover {
       background-color: #f1f1f1; }
 
   /* END NAV */
